<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainLogin" 
    android:background="@drawable/background_main"
    >
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/smartlisterlogo" />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="66dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/app_ml_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:scrollbars="none" >
    </EditText>    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/app_ml_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:scrollbars="none" />

    <Button
        android:id="@+id/registeruser"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/logon"
        android:layout_alignRight="@+id/logon"
        android:layout_marginBottom="16dp"
        android:background="#023759"
        android:minHeight="25dip"
        android:minWidth="35dip"
        android:padding="5dp"
        android:text="@string/app_ml_register"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/logon"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registeruser"
        android:layout_alignLeft="@+id/editText2"
        android:layout_marginBottom="16dp"
        android:background="#023759"
        android:minHeight="30dip"
        android:minWidth="40dip"
        android:text="@string/app_ml_logon"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/registeruser"
        android:clickable="true"
        android:text="@string/app_ml_help"
        android:textColorLink="#023759"
        android:textStyle="bold" />

</RelativeLayout>