<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
  <LinearLayout
  	android:orientation="vertical"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pageHeader"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/app_ml_welcome"
            android:textAppearance="?android:attr/textAppearanceLarge" />
   
   <TableLayout 
    	android:layout_width="match_parent" 
    	android:layout_height="match_parent" 
   	    android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffff">

    	<TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </TableRow>
        
    	<TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </TableRow>
    	
            
        <TableRow
          android:id="@+id/tableRow1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >

    	</TableRow>
    	
        <TableRow
          android:id="@+id/tableRow2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >

        	<EditText
        	    android:id="@+id/logonemail"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:ems="5"
        	    android:hint="@string/app_ml_email"
        	    android:inputType="textEmailAddress" />

    	</TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

         </TableRow>
            
        <TableRow
          android:id="@+id/tableRow3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >

    	</TableRow>
    	
        <TableRow
          android:id="@+id/tableRow4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >

        	<EditText
        	    android:id="@+id/logonpswd"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:ems="5"
        	    android:hint="@string/app_ml_password"
        	    android:inputType="textPassword" />

    	</TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

         </TableRow>
       
       </TableLayout>
       
   		<Button
   		    android:id="@+id/logon"
   		    android:layout_width="wrap_content"
   		    android:layout_height="match_parent"
   		    android:layout_gravity="right"
   		    android:text="@string/app_ml_logon" />
   		
   	  <TableLayout 
    	android:layout_width="match_parent" 
    	android:layout_height="match_parent" 
   	    android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffff">

    	<TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </TableRow>
        
    	<TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </TableRow>
        
    	<TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_ml_help" />
                
                <Button
                    android:id="@+id/registeruser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_ml_register" />

        </TableRow>
        
      </TableLayout>
        
    </LinearLayout>
    

</ScrollView>
